popup z-index fixed

--- a/css/style.css
+++ b/css/style.css
@@ -553,12 +553,11 @@
 
 .popup {
   opacity: 0;
-  z-index: -1;
   position: fixed;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  z-index: 2;
+  z-index: -1;
   max-width: 45rem;
   width: 100%;
   background-color: #56106d;
